--- a/style.css
+++ b/style.css
@@ -12,6 +12,21 @@ body {
     color: #fff;
 }
 
+header.header {
+    text-align: center;
+    margin-bottom: 25px;
+}
+
+footer.footer {
+    text-align: center;
+    margin-top: 30px;
+}
+
+p.footer-text a {
+    text-decoration: none;
+    color: #fff;
+}
+
 .container {
     max-width: 800px;
     margin: 0 auto;
